# circom-groth16-helpers

./: Cargo.toml  deny.toml  justfile
ark-serde-compat/: Cargo.toml  README.md
ark-serde-compat/src/: babyjubjub.rs  bn254.rs  impl_macro.rs  lib.rs
circom-types/: Cargo.toml  README.md
circom-types/src/: binfile.rs  lib.rs  traits.rs
circom-types/src/groth16/: mod.rs  public_input.rs  verification_key.rs  zkey.rs  zkey_to_ark.rs
circom-types/src/plonk/: mod.rs  proof.rs  zkey.rs
groth16/: Cargo.toml
groth16-material/: CHANGELOG.md  Cargo.toml  README.md
groth16-material/src/: circom.rs  lib.rs
groth16-material/src/circom/: proof_input.rs
groth16-sol/: CHANGELOG.md  Cargo.toml
groth16-sol/src/: lib.rs
groth16-sol/templates/: bn254_verifier.sol.tmpl
