[package]
name = "groth16-material"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["full", "reqwest", "reqwest-blocking"]
circom = ["dep:ruint", "dep:ark-babyjubjub", "dep:circom-witness-rs", "dep:ark-serialize"]
noir = []
reqwest = ["dep:reqwest"]
reqwest-blocking = ["reqwest/blocking"]
full = ["circom", "noir"]

[dependencies]
ark-babyjubjub = { workspace = true, optional = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true, optional = true }
circom-types = { workspace = true, features=["groth16", "zkey", "proof", "verification-key", "bn254"]}
circom-witness-rs = { workspace = true, optional = true }
eyre = { workspace = true }
hex = { workspace = true }
ruint = { workspace = true, optional=true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, optional=true}


